--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@
 
 /src/main/webapp/.DS_Store
 /src/main/webapp/node_modules
-/src/main/webapp//dist
+/src/main/webapp/dist
 
 # local env files
 /src/main/webapp/.env.local
