--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "start": "vue-cli-service serve",
+    "build": "vue-cli-service build; node move.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "rimraf": "^2.6.2",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
